--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -27,7 +27,7 @@
         <p>Coming Soon, to be announced later...</p>
       <!--/div!-->
       <!--div class="column"!-->
-      <img class="gamebox" src="Images/comingsoon.png" alt="Logo image" />
+      <img class="gamebox" src="images/comingsoon.png" alt="Logo image" />
       <!--/div!-->
       <!--/div!-->
       <hr />
