--- a/wdd130/mywebsite/third-page.html
+++ b/wdd130/mywebsite/third-page.html
@@ -16,7 +16,7 @@
     </head>
     <header>
 
-        <img class="logo" src="Images/FakeName.png" alt="Logo image" />
+        <img class="logo" src="images/fakename.png" alt="Logo image" />
       </header>
     <body>
       <p>
