--- a/wdd130/mywebsite/second-page.html
+++ b/wdd130/mywebsite/second-page.html
@@ -4,7 +4,7 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="second-page.html">Software Lineup</a>
-          <a href="site-planning.html">Site Plan</a>
+          <a href="site-plan.html">Site Plan</a>
           <a href="third-page.html">Contact Us</a>
           <a href="#">About Us</a>
           </nav>
