--- a/wdd130/mywebsite/third-page.html
+++ b/wdd130/mywebsite/third-page.html
@@ -2,11 +2,11 @@
 <html lang = "en">
     <head>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="second-page.html">Software Lineup</a>
-            <a href="site-planning.html">Site Plan</a>
-            <a href="third-page.html">Contact Us</a>
-            <a href="#">About Us</a>
+          <a href="index.html">Home</a>
+          <a href="second-page.html">Software Lineup</a>
+          <a href="site-plan.html">Site Plan</a>
+          <a href="third-page.html">Contact Us</a>
+          <a href="#">About Us</a>
           </nav>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
