--- a/wdd130/mywebsite/third-page.html
+++ b/wdd130/mywebsite/third-page.html
@@ -16,12 +16,13 @@
     </head>
     <header>
 
-        <img class="logo" src="images/fakename.png" alt="Logo image" />
+        <img class="logo" src="Images/FakeName.png" alt="Logo image" />
       </header>
     <body>
       <p>
         Contact Info is yet to be included here, sorry about that...
       </p>
+      <img class="logo" src="images/dodo.png" alt="Don't go dodo in the meantime." />
          
     </body>
     <footer>
