--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -19,7 +19,8 @@
         <img class="logo" src="images/fakename.png" alt="Logo image" />
       </header>
     <body>
-      
+      <main>
+      <p>We are a game development studio from Northern Utah, we aim to create fun, interactive games with engaging gameplay and stories in them.</p>
       <hr />
       <h2>Some of our games:</h2>
       <!--div class="row"!-->
@@ -27,7 +28,9 @@
         <p>Coming Soon, to be announced later...</p>
       <!--/div!-->
       <!--div class="column"!-->
-      <img class="gamebox" src="images/comingsoon.png" alt="Logo image" />
+      <a href="second-page.html">
+        <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
+      </a>
       <!--/div!-->
       <!--/div!-->
       <hr />
@@ -45,12 +48,11 @@
         <div class="right">&nbsp;</div>
       </div>
       <hr />
-    </body>
-    <footer>
+      </main>
+      <footer>
         <p class="colored">
           ©2022 Bear River Games LLC, all rights reserved.
         </p>
-  </footer>
-
-
+    </footer>  
+    </body>
 </html>
