--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -12,47 +12,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="styles/newccs.css">
-        <title>Main Page</title>
+        <title>Our Software Lineup</title>
     </head>
     <header>
 
         <img class="logo" src="images/fakename.png" alt="Logo image" />
       </header>
-    <body>
+    <main>
       <main>
-      <p>We are a game development studio from Northern Utah, we aim to create fun, interactive games with engaging gameplay and stories in them.</p>
-      <hr />
-      <h2>Some of our games:</h2>
-      <!--div class="row"!-->
-      <!--div class="column"!-->
-        <p>Coming Soon, to be announced later...</p>
-      <!--/div!-->
-      <!--div class="column"!-->
-      <a href="second-page.html">
+      <h2>Our Software Lineup</h2>
+      <p>We are currently working on our first game, for more information, visit our home page.</p>
+        <p>Sorry about that, we hope to announce our first game very soon!</p>
         <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
-      </a>
-      <!--/div!-->
-      <!--/div!-->
-      <hr />
-      <h2>Site Map</h2>
-      <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">
-          Software Lineup
-          <!-- this page will have a name later -->
-        </div>
-        <div class="sm-page3">Contact Us</div>
-  
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
-      </div>
-      <hr />
       </main>
       <footer>
         <p class="colored">
           ©2022 Bear River Games LLC, all rights reserved.
         </p>
-    </footer>  
+      </footer>
     </body>
+    
+
+
 </html>
