--- a/wdd130/mywebsite/second-page.html
+++ b/wdd130/mywebsite/second-page.html
@@ -19,18 +19,19 @@
         <img class="logo" src="images/fakename.png" alt="Logo image" />
       </header>
     <main>
-    <body>
+      <main>
       <h2>Our Software Lineup</h2>
       <p>We are currently working on our first game, for more information, visit our home page.</p>
         <p>Sorry about that, we hope to announce our first game very soon!</p>
-         
-    </body>
-    </main>
-    <footer>
+        <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
+      </main>
+      <footer>
         <p class="colored">
           ©2022 Bear River Games LLC, all rights reserved.
         </p>
-  </footer>
+      </footer>
+    </body>
+    
 
 
 </html>
