--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="second-page.html">Software Lineup</a>
-          <a href="site-plan.html">Site Plan</a>
-          <a href="third-page.html">Contact Us</a>
-          <a href="#">About Us</a>
-          </nav>
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="styles/newccs.css">
+        <link type="text/css" rel="stylesheet" href="styles/styles.css">
         <title>Main Page</title>
     </head>
     <header>
-
-        <img class="logo" src="images/fakename.png" alt="Logo image" />
+      <img class="logo" src="images/fakename.png" alt="Logo image" />
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="second-page.html">Software Lineup</a>
+        <a href="third-page.html">Contact Us</a>
+        <a href="#">About Us</a>
+        </nav>
+        
       </header>
     <body>
       <main>
@@ -34,25 +34,16 @@
       <!--/div!-->
       <!--/div!-->
       <hr />
-      <h2>Site Map</h2>
-      <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">
-          Software Lineup
-          <!-- this page will have a name later -->
-        </div>
-        <div class="sm-page3">Contact Us</div>
-  
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
-      </div>
-      <hr />
       </main>
       <footer>
-        <p class="colored">
+        <a href="site-plan.html">
+          <img class="gamebox" src="images/site-plan-link.png" alt="Site Plan" />
+        </a>
+        <p id="information">
           ©2022 Bear River Games LLC, all rights reserved.
         </p>
-    </footer>  
+    </footer>
+      
     </body>
 </html>
+
