--- a/wdd130/mywebsite/second-page.html
+++ b/wdd130/mywebsite/second-page.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="second-page.html">Software Lineup</a>
-          <a href="site-plan.html">Site Plan</a>
-          <a href="third-page.html">Contact Us</a>
-          <a href="#">About Us</a>
-          </nav>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="styles/newccs.css">
+        <link type="text/css" rel="stylesheet" href="styles/styles.css">
         <title>Our Software Lineup</title>
     </head>
     <header>
 
         <img class="logo" src="images/fakename.png" alt="Logo image" />
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="second-page.html">Software Lineup</a>
+          <a href="third-page.html">Contact Us</a>
+          <a href="#">About Us</a>
+          </nav>
       </header>
     <main>
       <main>
@@ -26,7 +25,10 @@
         <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
       </main>
       <footer>
-        <p class="colored">
+        <a href="site-plan.html">
+          <img class="gamebox" src="images/site-plan-link.png" alt="Site Plan" />
+        </a>
+        <p id="information">
           ©2022 Bear River Games LLC, all rights reserved.
         </p>
       </footer>
