--- a/wdd130/mywebsite/third-page.html
+++ b/wdd130/mywebsite/third-page.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="second-page.html">Software Lineup</a>
-          <a href="site-plan.html">Site Plan</a>
-          <a href="third-page.html">Contact Us</a>
-          <a href="#">About Us</a>
-          </nav>
+        
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link type="text/css" rel="stylesheet" href="styles/newccs.css">
+        <link type="text/css" rel="stylesheet" href="styles/styles.css">
         <title>Contact Us</title>
     </head>
     <header>
 
-        <img class="logo" src="images/fakename.png" alt="Logo image" />
+        <img class="logo" src="Images/FakeName.png" alt="Logo image" />
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="second-page.html">Software Lineup</a>
+          <a href="third-page.html">Contact Us</a>
+          <a href="#">About Us</a>
+          </nav>
       </header>
     <body>
       <p>
@@ -26,9 +26,12 @@
          
     </body>
     <footer>
-        <p class="colored">
-            ©2022 Bear River Games LLC, all rights reserved.
-        </p>
+      <a href="site-plan.html">
+        <img class="gamebox" src="images/site-plan-link.png" alt="Site Plan" />
+      </a>
+      <p id="information">
+        ©2022 Bear River Games LLC, all rights reserved.
+      </p>
   </footer>
 
 
