--- a/wdd130/mywebsite/third-page.html
+++ b/wdd130/mywebsite/third-page.html
@@ -10,7 +10,7 @@
     </head>
     <header>
 
-        <img class="logo" src="Images/FakeName.png" alt="Logo image" />
+        <img class="logo" src="images/fakename.png" alt="Logo image" />
         <nav>
           <a href="index.html">Home</a>
           <a href="second-page.html">Software Lineup</a>
