--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang = "en">
     <head>
-
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,28 +15,30 @@
         <a href="third-page.html">Contact Us</a>
         <a href="#">About Us</a>
         </nav>
-        
       </header>
     <body>
       <main>
-      <p>We are a game development studio from Northern Utah, we aim to create fun, interactive games with engaging gameplay and stories in them.</p>
-      <hr />
-      <h2>Some of our games:</h2>
-      <!--div class="row"!-->
-      <!--div class="column"!-->
-        <p>Coming Soon, to be announced later...</p>
-      <!--/div!-->
-      <!--div class="column"!-->
-      <a href="second-page.html">
-        <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
-      </a>
-      <!--/div!-->
-      <!--/div!-->
-      <hr />
+        <p>We are a game development studio from Northern Utah, we aim to create fun, interactive games with engaging gameplay and stories in them.</p>
+        <hr />
+        <h2>Some of our games:</h2>
+        <section class="game-grid">
+          
+          <a href="second-page.html">
+            <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
+          </a>
+          <p>Coming Soon, to be announced later...</p>
+        </section>
+        <hr />
+        <section class="business">
+          <p>We are a game company that was established on December 31st 2018.</p>
+          <p>Want to join us or learn more about us? press the button down below for more information!</p>
+          <a class="join" href="#">About Us</a>
+
+        </section>
       </main>
       <footer>
         <a href="site-plan.html">
-          <img class="gamebox" src="images/site-plan-link.png" alt="Site Plan" />
+          <img src="images/site-plan-link.png" alt="Site Plan" />
         </a>
         <p id="information">
           ©2022 Bear River Games LLC, all rights reserved.
