--- a/wdd130/mywebsite/second-page.html
+++ b/wdd130/mywebsite/second-page.html
@@ -22,11 +22,23 @@
       <h2>Our Software Lineup</h2>
       <p>We are currently working on our first game, for more information, visit our home page.</p>
         <p>Sorry about that, we hope to announce our first game very soon!</p>
+        <h2>Untitled Survival Game</h2>
+      <section class="game-grid">
         <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
+        <p>Coming Soon!</p>
+      </section>
+      <h2>Untitled 2D Platformer</h2>
+      <section class="game-grid">
+        <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
+        <p>Coming Soon!</p>
+      </section>
+      <section class="empty-space"></section>
+      
+      </main>
       </main>
       <footer>
         <a href="site-plan.html">
-          <img class="gamebox" src="images/site-plan-link.png" alt="Site Plan" />
+          <img src="images/site-plan-link.png" alt="Site Plan" />
         </a>
         <p id="information">
           ©2022 Bear River Games LLC, all rights reserved.
