--- a/wdd130/mywebsite/third-page.html
+++ b/wdd130/mywebsite/third-page.html
@@ -10,7 +10,7 @@
     </head>
     <header>
 
-        <img class="logo" src="images/fakename.png" alt="Logo image" />
+        <img class="logo" src="images/fakename.png" alt="Logo image"/>
         <nav>
           <a href="index.html">Home</a>
           <a href="second-page.html">Software Lineup</a>
@@ -18,16 +18,18 @@
           <a href="#">About Us</a>
           </nav>
       </header>
-    <body>
-      <p>
-        Contact Info is yet to be included here, sorry about that...
-      </p>
-      <img class="logo" src="images/dodo.png" alt="Don't go dodo in the meantime." />
-         
-    </body>
+    <main>
+        <body>
+          <p>
+            Contact Info is yet to be included here, sorry about that...
+          </p>
+          <img class="logo" src="images/dodo.png" alt="Don't go dodo in the meantime." />
+
+        </body>
+    </main>
     <footer>
       <a href="site-plan.html">
-        <img class="gamebox" src="images/site-plan-link.png" alt="Site Plan" />
+        <img src="images/site-plan-link.png" alt="Site Plan" />
       </a>
       <p id="information">
         ©2022 Bear River Games LLC, all rights reserved.
