--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -21,7 +21,7 @@
         <p>We are a game development studio from Northern Utah, we aim to create fun, interactive games with engaging gameplay and stories in them.</p>
         <hr />
         <h2>Some of our games:</h2>
-        <section class="game-grid">
+        <section class="home-click">
           
           <a href="second-page.html">
             <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
@@ -30,8 +30,10 @@
         </section>
         <hr />
         <section class="business">
-          <p>We are a game company that was established on December 31st 2018.</p>
-          <p>Want to join us or learn more about us? press the button down below for more information!</p>
+          <div class ="fireside">
+          <p>We are a game company that was established on December 31st 2018. Want to join us or learn more about us? press the button down below for more information!</p>
+          <img src="images/firechat.png" alt="Dodo camping.">
+          </div>
           <a class="join" href="#">About Us</a>
 
         </section>
@@ -43,6 +45,17 @@
         <p id="information">
           ©2022 Bear River Games LLC, all rights reserved.
         </p>
+        <div class ="socials">
+          <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+          <img src="images/instagram.png" alt="instagram icon, basically facebook again, due to Meta.">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        </div>
     </footer>
       
     </body>
