--- a/wdd130/mywebsite/index.html
+++ b/wdd130/mywebsite/index.html
@@ -20,18 +20,18 @@
       <main>
         <p>We are a game development studio from Northern Utah, we aim to create fun, interactive games with engaging gameplay and stories in them.</p>
         <hr />
-        <h2>Some of our games:</h2>
+        <h2>Here are some of our games:</h2>
         <section class="home-click">
           
           <a href="second-page.html">
             <img class="gamebox" src="images/comingsoon.png" alt="Dodo?" />
           </a>
-          <p>Coming Soon, to be announced later...</p>
+          <p>Our first two games are currently in development. Check out our software lineup page for more information about them!</p>
         </section>
         <hr />
         <section class="business">
           <div class ="fireside">
-          <p>We are a game company that was established on December 31st 2018. Want to join us or learn more about us? press the button down below for more information!</p>
+          <p>We are a game company that was established on December 31st 2018. Want to join us or learn more about us? Press the button down below for more information!</p>
           <img src="images/firechat.png" alt="Dodo camping.">
           </div>
           <a class="join" href="#">About Us</a>
@@ -60,4 +60,3 @@
       
     </body>
 </html>
-
