--- a/wdd130/mywebsite/second-page.html
+++ b/wdd130/mywebsite/second-page.html
@@ -8,7 +8,7 @@
         <title>Our Software Lineup</title>
     </head>
     <header>
-
+      
         <img class="logo" src="images/fakename.png" alt="Logo image" />
         <nav>
           <a href="index.html">Home</a>
@@ -22,12 +22,35 @@
       <p>We are currently working on our first two games, we have not fully announced them yet. For more information, check out our software lineup down below for details.</p>
         <h2>Untitled Survival Game</h2>
       <section class="game-grid">
-        <img class="yellow" src="images/survival.png" alt="Totally Fine" />
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img class="yellow" src="images/survival.png" alt="Totally Fine">
+            </div>
+            <div class="flip-card-back">
+              <h1>Untitled Survival Game</h1>
+              <p>Genre: Survival, Arcade</p>
+              <p>Release Date: TBD</p>
+            </div>
+          </div>
+        </div>
+        
         <p>A TOTALLY normal survival game where you run from obstacles in a timed arcade challenge and have to avoid getting hit by them and lose all of your extra lives. As of now, we haven't revealed the full details of the project, we hope to fully announce it in the future!</p>
       </section>
       <h2>Untitled 2D Platformer</h2>
       <section class="game-grid">
-        <img class="green" src="images/fantasy.png" alt="Definitely Fine" />
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <img class="green" src="images/fantasy.png" alt="Definitely Fine">
+            </div>
+            <div class="flip-card-back">
+              <h1>Untitled 2D Platformer</h1>
+              <p>Genre: Puzzle, Sidescroller, Platformer</p>
+              <p>Release Date: TBD</p>
+            </div>
+          </div>
+        </div>
         <p>A wacky 2D sidescrolling adventure set in a fantasy world where you must travel and fight malevolent forces trying to take over the land. As of now, we haven't revealed the full details of the project, we hope to fully announce it in the future!</p>
       </section>
       <section class="empty-space"></section>
