--- a/wdd130/mywebsite/second-page.html
+++ b/wdd130/mywebsite/second-page.html
@@ -14,7 +14,7 @@
           <a href="index.html">Home</a>
           <a href="second-page.html">Software Lineup</a>
           <a href="third-page.html">Contact Us</a>
-          <a href="#">About Us</a>
+          <a href="contactus.html">About Us</a>
           </nav>
       </header>
     <main>
