Update and rename contactus.html to aboutus.html

--- a/wdd130/mywebsite/aboutus.html
+++ b/wdd130/mywebsite/aboutus.html
@@ -7,7 +7,7 @@
             <a href="index.html">Home</a>
             <a href="second-page.html">Software Lineup</a>
             <a href="third-page.html">Contact Us</a>
-            <a href="contactus.html">About Us</a>
+            <a href="aboutus.html">About Us</a>
             </nav>
         </header>
 
