Added more to aboutus.html...

--- a/wdd130/mywebsite/aboutus.html
+++ b/wdd130/mywebsite/aboutus.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="styles/styles.css">
+        <title>About Us</title>
+    </head>
     <body>
         <header>
-
             <img class="logo" src="images/fakename.png" alt="Logo image"/>
             <nav>
             <a href="index.html">Home</a>
@@ -10,9 +17,38 @@
             <a href="aboutus.html">About Us</a>
             </nav>
         </header>
-
+        <main>
+          <h1>About Us</h1>
+          <h4>Our founding and what do we do?</h4>
+          <p>
+            We are a game development company that hails from Northern Utah that aims to create and develop fun, interactive games for all ages, from children to adults. However, due to being new to the game industry, as we were founded on the New Year’s Eve right before 2019, we have yet to release our first game title, which has also yet to be announced and has been in development since 2019, we hope to announce it in the near future! One thing that we can say about our first project is that it is coming to PC and Mac systems first.
+          </p>
+          <h4>Our development philosophy</h4>
+      <p>Our development philosophy about creating games is to create an interactive piece of art that the player can immerse themselves in, by creating both an engaging, well, constructed story and fun gameplay with innovative mechanics. Ever felt a game is too weak in it's deliverence of fun? We believe there should be a balance between the two in order to create a great game. We also seek to experiment with different kinds of game genres to implement an interesting spin on them. We also want to think in high consideration about what you, the player, would want to experience in our game titles. We hope that you enjoy our games once they come out in the future!</p>
+      <h3>Audience</h3>
+      <h4>Who do we try to cater to?</h4>
+      <p>   As part of our mission, we aim to cater to everyone of all ages, from children to adults, so that everyone can enjoy the experience that we bring them with our games, families and friends can come together to have a fun experience! We will try to do as much as possible to make our games be enjoyable by everyone who will play them.</p> 
+      <h4>Ways we do so</h4>
+      <p>We also think about in hard consideration what the player would enjoy when making our games. We also think that experimenting within our titles will especially help us in understanding and achieving this, as that we become better at producing great games in the future. We will try to make our games friendly to the audience as much as possible when doing this, to not make a game that is too hard or unbearable to play, but one that is easy for even new gamers to pick up and play. We will also have test audiences that will record input that will help us determine what would be good in put in the game. We will also take into consideration of our mistakes, by finding a way to correct them in future titles to help with the player experience.</p>
+        </main>
+        <footer>
+            <a href="site-plan.html">
+              <img src="images/site-plan-link.png" alt="Site Plan" />
+            </a>
+            <p id="information">
+              ©2022 Bear River Games LLC, all rights reserved.
+            </p>
+            <div class ="socials">
+              <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+              <img src="images/instagram.png" alt="instagram icon, basically facebook again, due to Meta.">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            </div>
+          </footer>
     </body>
-
-
-
 </html>
